common.blocks/todos/__todo-checkbox/todos__todo-checkbox.css
.todos__todo-checkbox {
    display: flex;
    align-items: center;
    font-size: 24px;
    font-weight: 300;
}

.todos__todo-checkbox input[type="checkbox"] + label {
    cursor: pointer;
}

.todos__todo-checkbox input[type="checkbox"]:checked + label {
    color: var(--shading-text-color);
    text-decoration: line-through;
}

.todos__todo-checkbox input[type="checkbox"] {
    appearance: none;
    margin-right: 15px;
    width: var(--default-icon-size);
    height: var(--default-icon-size);
    background: url('unchecked.svg') no-repeat center center;
    transition: var(--default-transition-time) background;
}

.todos__todo-checkbox input[type="checkbox"]:checked {
    background-image: url('checked.svg');
}

